# reinvent-2025

./: .env.example  .gitignore  README.md  pyproject.toml
output/: cheatsheet.md  search_index.json
output/summaries/: 14se2WpEaCo-AWS-reInvent-2025---NEW-LAUNCH-Kiro-powers-Empower.md  1HNUH6j5t4A-AWS-reInvent-2025---Introducing-AI-driven-developm.md  50hKzkjRErE-AWS-reInvent-2025---Scaling-Globally-Priority-Pass.md  Ap0tXXvyn3k-AWS-reInvent-2025-Unlock-the-power-of-Kiro-steerin.md  FAbm2MXYaqc-AWS-reInvent-2025---Designing-Agent-Native-Dev-Tea.md  Fer2DKJ2jNA-AWS-reInvent-2025---Building-software-like-never-b.md  Fgvnj9fbxeA-AWS-reInvent-2025---Developer-Experience-Economics.md  Kjrh4f1I6Ag-AWS-reInvent-2025---Whats-new-in-fullstack-AWS-app.md  Kq0Se1nnT3U-AWS-reInvent-2025---Generative-AI-agents-MCP-and-t.md  LvvSs0qDmM8-AWS-reInvent-2025---Accelerate-NET-application-mod.md  MfaRnbg217g-AWS-reInvent-2025---Modernizing-Java-applications.md  S8G0qRuWweA-AWS-reInvent-2025---Kiro-Your-agentic-IDE-for-spec.md  VRw3g-v4B00-AWS-reInvent-2025---From-concept-to-production-Bui.md  XpgcpsGKIio-AWS-reInvent-2025---Accelerate-development-with-Ki.md  XxAaidwyNNM-AWS-reInvent-2025---Code-completion-to-agents-The.md  _4hvWns9ICY-AWS-reInvent-2025---AWS-infrastructure-as-code-A-y.md  bATt9ZtXSNw-AWS-reInvent-2025---Secure-Amazon-ECS-observabilit.md  cltz3OXQtSE-AWS-reInvent-2025---Crowning-the-Kiro-code-champio.md  eLyFTbVtY64-AWS-reInvent-2025---Accelerate-multi-step-SDLC-wit.md  jEJrOMU5nQU-AWS-reInvent-2025---Accelerate-Terraform-Provider.md  (+5 more)
src/playlist_summarizer/: __init__.py  (+2 more)
(+16 files in other folders)
